Sat Feb 20 12:14:47 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* test_errnos.c (main): added the new error codes to the tests

	* gsl_errno.h: moved all the error codes into a single enum
 	instead of having a separate enum for GSL_SUCCESS and GSL_FAILURE

Fri Feb 19 15:56:15 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* gsl_errno.h, strerror.c: added GSL_CONTINUE as an error code
 	indicating that an iteration process has not converged and should
 	be continued for more iterations.

Tue Nov 17 17:11:31 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_test.h: removed #include <config.h> which should not be
 	present in installed header files

Tue Nov 10 15:55:56 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test_results.c (gsl_test_abs), gsl_test.h: added gsl_test_abs
 	for absolute errors, like gsl_test_rel for relative errors

Fri Oct 23 12:51:01 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test_results.c (gsl_test_rel): print a shorter "observed vs
 	expected" message if the description is 45 characters or longer

Mon Jun  1 11:02:04 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EUNSUP for errors caused by a hardware
	feature which is not supported on a particular platform

	* renamed test.c to test_results.c to avoid confusion when debugging
	other test programs called test.c

Sat May 30 16:11:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: add GSL_ESING for errors caused by singularities
	or other bad function behavior

Fri May 29 14:41:19 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_errno.h: added GSL_EBADLEN to signify bad lengths of
 	matrices or vectors (e.g. non-conformant sizes in a matrix or
 	vector multiplication)

Wed May 27 18:15:34 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c (gsl_test_str): changed things so that the strings aren't
 	printed unless the string equality test fails (usually they were
 	too long)

Mon May 18 17:58:20 1998  Brian Gough  <bjg@vvv.lanl.gov>
