@@ -45,6 +45,7 @@ main (void)
   CHECK(GSL_EBADLEN);
   CHECK(GSL_ENOTSQR);
   CHECK(GSL_ESING);
+  CHECK(GSL_EDIVERGE);
   CHECK(GSL_EUNSUP);
   CHECK(GSL_EUNIMPL);
 
